Add score. Simplify app-state.